# ccpkg

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  project.lua
example/: .gitignore  project.lua
ports/bzip2/: CMakeLists.txt  init.lua
ports/cppzmq/: init.lua
ports/expat/: init.lua
ports/fmt/: init.lua
ports/libffi/: init.lua
ports/liblzma/: init.lua
ports/libuuid/: init.lua
ports/libzmq/: init.lua
ports/lz4/: init.lua
ports/msgpack-c/: init.lua
ports/msgpack-cxx/: 0001-fix-no-boost.patch  init.lua
ports/openssl/: init.lua
ports/pybind11/: init.lua
ports/python3/: 0001-fix-android.patch  0002-fix-linux.patch  init.lua
ports/rapidjson/: 0001-add-prefix-to-pkgconfig.patch  init.lua
ports/rocksdb/: 0001-fix-android.patch  init.lua
ports/spdlog/: init.lua
ports/sqlite3/: init.lua
scripts/: cli.lua  init.lua  main.lua
scripts/buildsystem/: cmake.lua  configure_make.lua  init.lua
scripts/ccpkg/: args.lua  checksum.lua  download.lua  extract.lua  init.lua  install_pkg.lua  patch.lua  pkg.lua
scripts/cli/: init.lua  install.lua
scripts/cli/export/: init.lua  prefab.lua
scripts/commands/: install.lua
scripts/ext/: args.lua  init.lua  string.lua  table.lua
scripts/ext/ccpkg/: init.lua  install.lua
scripts/ext/sh/: init.lua
scripts/platform/: android.lua  init.lua  linux.lua
scripts/shell/: init.lua
scripts/tools/: checksum.lua  cmake.lua  configure_make.lua  download.lua  extract.lua  init.lua
src/: libext_os.cc  libext_os_path.cc  libext_os_run.cc  main.c  process.cc  process.h
tests/: fixture.cc  fixture.h  test_ext_os.cc
toolsrc/: .gitignore  CMakeLists.txt  ccpkg.c  ext_os_run.c  lccpkg.c  lfs.cc  libext_os.cc  libfs.cc  libpath.cc  main.c  os_run.c  project.lua
toolsrc/tests/: test_ext_os.cc  test_fs.cc  test_os_run.cc  test_path_join.cc
